Refactor project and report panels for improved functionality and UI
- Enhanced PnlProjetos to include search functionality and better project listing.
- Updated PnlRelatorios to allow filtering by project, stage, and contributor, with a detailed report display.
- Modified PnlCardProjeto to dynamically show task and contributor counts, and improved layout.
- Added editing capabilities for contributors and projects in their respective dialogs.
- Improved task dialog to allow selection of multiple contributors and display relevant information.