@@ -90,8 +90,12 @@ public class GerenciadorInterfaceGrafica {
 
     @SuppressWarnings("unchecked")
     public List<Projeto> listarProjetos() {
+        return consultarProjetos("");
+    }
+
+    public List<Projeto> consultarProjetos(String termo) {
         try {
-            return gerenciadorDominio.listar(Projeto.class);
+            return gerenciadorDominio.consultarProjetos(termo);
         } catch (HibernateException ex) {
             mostrarErro("Erro ao listar projetos.", ex);
             return List.of();
@@ -111,10 +115,40 @@ public class GerenciadorInterfaceGrafica {
         }
     }
 
+    public Projeto alterarProjeto(Projeto projeto, String nomeProjeto) {
+        try {
+            Projeto atualizado = gerenciadorDominio.alterarProjeto(projeto, nomeProjeto);
+            if (projetoSelecionado != null && projetoSelecionado.equals(projeto)) {
+                projetoSelecionado = atualizado;
+            }
+            return atualizado;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao alterar projeto.", ex);
+            return null;
+        }
+    }
+
+    public boolean excluirProjeto(Projeto projeto) {
+        try {
+            gerenciadorDominio.excluirProjeto(projeto);
+            if (projetoSelecionado != null && projetoSelecionado.equals(projeto)) {
+                projetoSelecionado = null;
+            }
+            return true;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao excluir projeto.", ex);
+            return false;
+        }
+    }
+
     @SuppressWarnings("unchecked")
     public List<Contribuidor> listarContribuidores() {
+        return consultarContribuidores("");
+    }
+
+    public List<Contribuidor> consultarContribuidores(String termo) {
         try {
-            return gerenciadorDominio.listar(Contribuidor.class);
+            return gerenciadorDominio.consultarContribuidores(termo);
         } catch (HibernateException ex) {
             mostrarErro("Erro ao listar contribuidores.", ex);
             return List.of();
@@ -130,6 +164,25 @@ public class GerenciadorInterfaceGrafica {
         }
     }
 
+    public Contribuidor alterarContribuidor(Contribuidor contribuidor, String nome, String email) {
+        try {
+            return gerenciadorDominio.alterarContribuidor(contribuidor, nome, email);
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao alterar contribuidor.", ex);
+            return null;
+        }
+    }
+
+    public boolean excluirContribuidor(Contribuidor contribuidor) {
+        try {
+            gerenciadorDominio.excluirContribuidor(contribuidor);
+            return true;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao excluir contribuidor.", ex);
+            return false;
+        }
+    }
+
     public void selecionarProjeto(Projeto projeto) {
         this.projetoSelecionado = projeto;
     }
@@ -138,7 +191,7 @@ public class GerenciadorInterfaceGrafica {
         if (projetoSelecionado == null) {
             List<Projeto> projetos = listarProjetos();
             if (!projetos.isEmpty()) {
-                projetoSelecionado = projetos.getFirst();
+                projetoSelecionado = projetos.get(0);
             }
         }
         return projetoSelecionado;
@@ -153,17 +206,100 @@ public class GerenciadorInterfaceGrafica {
     }
 
     public Tarefa adicionarTarefaNaEtapa(EtapaProjeto etapa, String nomeTarefa) {
+        return adicionarTarefaNaEtapa(etapa, nomeTarefa, List.of());
+    }
+
+    public Tarefa adicionarTarefaNaEtapa(EtapaProjeto etapa, String nomeTarefa, List<Contribuidor> contribuidores) {
         try {
-            return gerenciadorDominio.inserirTarefa(etapa, nomeTarefa);
+            Tarefa tarefa = gerenciadorDominio.inserirTarefa(etapa, nomeTarefa, contribuidores);
+            recarregarProjetoSelecionado();
+            return tarefa;
         } catch (HibernateException ex) {
             mostrarErro("Erro ao inserir tarefa.", ex);
             return null;
         }
     }
 
+    public Tarefa alterarTarefa(Tarefa tarefa, String nomeTarefa, List<Contribuidor> contribuidores) {
+        try {
+            Tarefa atualizada = gerenciadorDominio.alterarTarefa(tarefa, nomeTarefa, contribuidores);
+            recarregarProjetoSelecionado();
+            return atualizada;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao alterar tarefa.", ex);
+            return null;
+        }
+    }
+
+    public boolean excluirTarefa(Tarefa tarefa) {
+        try {
+            gerenciadorDominio.excluirTarefa(tarefa);
+            recarregarProjetoSelecionado();
+            return true;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao excluir tarefa.", ex);
+            return false;
+        }
+    }
+
+    public boolean moverTarefa(Tarefa tarefa, EtapaProjeto etapaDestino) {
+        try {
+            gerenciadorDominio.moverTarefa(tarefa, etapaDestino);
+            recarregarProjetoSelecionado();
+            return true;
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao mover tarefa.", ex);
+            recarregarProjetoSelecionado();
+            return false;
+        }
+    }
+
+    public List<Tarefa> consultarTarefas(Integer projetoId, Integer etapaId, Integer contribuidorId) {
+        try {
+            return gerenciadorDominio.consultarTarefas(projetoId, etapaId, contribuidorId);
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao consultar tarefas.", ex);
+            return List.of();
+        }
+    }
+
+    public long contarProjetos() {
+        try {
+            return gerenciadorDominio.contarProjetos();
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao contar projetos.", ex);
+            return 0;
+        }
+    }
+
+    public long contarContribuidores() {
+        try {
+            return gerenciadorDominio.contarContribuidores();
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao contar colaboradores.", ex);
+            return 0;
+        }
+    }
+
+    public long contarTarefas(boolean concluidas) {
+        try {
+            return gerenciadorDominio.contarTarefas(concluidas);
+        } catch (HibernateException ex) {
+            mostrarErro("Erro ao contar tarefas.", ex);
+            return 0;
+        }
+    }
+
     public Optional<String> solicitarNomeNovoProjeto(Component componentePai) {
         Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
         DlgProjetoCadastro dialog = new DlgProjetoCadastro(janelaPai, true);
+        dialog.setVisible(true);
+        return dialog.getNomeProjeto();
+    }
+
+    public Optional<String> solicitarEdicaoProjeto(Component componentePai, Projeto projeto) {
+        Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
+        DlgProjetoCadastro dialog = new DlgProjetoCadastro(janelaPai, true, projeto);
         dialog.setVisible(true);
         return dialog.getNomeProjeto();
     }
@@ -181,11 +317,39 @@ public class GerenciadorInterfaceGrafica {
         return Optional.ofNullable(contribuidor);
     }
 
+    public Optional<Contribuidor> solicitarEdicaoContribuidor(Component componentePai, Contribuidor contribuidor) {
+        Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
+        DlgContribuidorCadastro dialog = new DlgContribuidorCadastro(janelaPai, true, contribuidor);
+        dialog.setVisible(true);
+
+        if (!dialog.isConfirmado()) {
+            return Optional.empty();
+        }
+
+        Contribuidor atualizado = alterarContribuidor(contribuidor, dialog.getNomeInformado(), dialog.getEmailInformado());
+        return Optional.ofNullable(atualizado);
+    }
+
     public Optional<String> solicitarNovaTarefa(Component componentePai, String nomeEtapa) {
         Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
         DlgTarefaCadastro dialog = new DlgTarefaCadastro(janelaPai, true, nomeEtapa);
         dialog.setVisible(true);
         return dialog.getNomeTarefa();
+    }
+
+    public Optional<DadosTarefa> solicitarNovaTarefaCompleta(Component componentePai, String nomeEtapa) {
+        Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
+        DlgTarefaCadastro dialog = new DlgTarefaCadastro(janelaPai, true, nomeEtapa, listarContribuidores());
+        dialog.setVisible(true);
+        return dialog.getNomeTarefa().map(nome -> new DadosTarefa(nome, dialog.getContribuidoresSelecionados()));
+    }
+
+    public Optional<DadosTarefa> solicitarEdicaoTarefa(Component componentePai, Tarefa tarefa) {
+        Window janelaPai = componentePai == null ? null : SwingUtilities.getWindowAncestor(componentePai);
+        String etapa = tarefa.getEtapa() == null ? "-" : tarefa.getEtapa().getNome();
+        DlgTarefaCadastro dialog = new DlgTarefaCadastro(janelaPai, true, etapa, tarefa, listarContribuidores());
+        dialog.setVisible(true);
+        return dialog.getNomeTarefa().map(nome -> new DadosTarefa(nome, dialog.getContribuidoresSelecionados()));
     }
 
     private void atualizarTela(JPanel painel) {
@@ -195,6 +359,20 @@ public class GerenciadorInterfaceGrafica {
             pnlEquipe.atualizarTabela();
         } else if (painel instanceof PnlProjeto pnlProjeto) {
             pnlProjeto.atualizarQuadro();
+        } else if (painel instanceof iterum.viewer.PnlDashboard pnlDashboard) {
+            pnlDashboard.atualizarDashboard();
+        } else if (painel instanceof iterum.viewer.PnlRelatorios pnlRelatorios) {
+            pnlRelatorios.atualizarRelatorios();
+        }
+    }
+
+    private void recarregarProjetoSelecionado() {
+        if (projetoSelecionado != null && projetoSelecionado.getId() != null) {
+            try {
+                projetoSelecionado = gerenciadorDominio.buscarPorId(Projeto.class, projetoSelecionado.getId());
+            } catch (HibernateException ex) {
+                mostrarErro("Erro ao recarregar projeto selecionado.", ex);
+            }
         }
     }
 
@@ -203,5 +381,8 @@ public class GerenciadorInterfaceGrafica {
                 mensagem + " " + ex.getMessage(),
                 "Banco de dados",
                 JOptionPane.ERROR_MESSAGE);
+    }
+
+    public record DadosTarefa(String nome, List<Contribuidor> contribuidores) {
     }
 }
